--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     "pug": "^2.0.4"
   },
   "devDependencies": {
-    "kind-of": "^6.0.3"
+    "acorn": "^7.1.1",
+    "braces": "^3.0.2",
+    "kind-of": "^6.0.3",
+    "mem": "^6.0.1",
+    "minimist": "^1.2.5"
   }
 }
