--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "devDependencies": {
     "acorn": "^7.1.1",
     "braces": "^3.0.2",
-    "kind-of": "^6.0.3",
+    "kind-of": "file:node_modules/kind-of",
     "mem": "^6.0.1",
-    "minimist": "^1.2.5"
+    "minimist": "file:node_modules/minimist"
   }
 }
